# a-sdlc

./: .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  COMMAND_REFERENCE.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.test  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  lint.yml  release.yml  smoke-test.yml
.sdlc/: config.yaml  lesson-learn.md  project.json
.sdlc/.cache/: checksums.json
.sdlc/artifacts/: architecture.md  codebase-summary.md  data-model.md  directory-structure.md  key-workflows.md
.sdlc/tasks/: SDLC-T00193.md
.serena/: project.yml
alembic/versions/: 0001_baseline_v15.py  0002_projects_path_nullable.py
docker/minio/: init.sh
example-artifacts/: architecture.html  architecture.md  codebase-summary.html  data-model.html  directory-structure.html  index.html  key-workflows.html  key-workflows.md  requirements.md  task.md
logs/: chat.json  post_tool_use.json  stop.json
monitoring/: .gitignore  claude-code-env.sh  docker-compose.yaml  langfuse-hook.py
src/a_sdlc/: __init__.py  adapters.py  cli.py  cli_targets.py  daemon.py  executor.py  gemini_extension.py  installer.py  mcp_setup.py  monitoring_setup.py  notifications.py  orchestrator.py  orchestrator_prompts.py  playwright_setup.py  sonarqube_setup.py  transpiler.py  uninstall.py
src/a_sdlc/artifact_templates/: architecture.template.md  artifact.template.html  claude-md.template.md  codebase-summary.template.md  config.template.yaml  data-model.template.md  directory-structure.template.md  gemini-md.template.md  index.template.html  key-workflows.template.md  lesson-learn.template.md  prd.template.md  requirements.template.md  task.template.md
src/a_sdlc/artifacts/: __init__.py  base.py  confluence.py  local.py  prd.py  prd_local.py  task_generator.py  validator.py
src/a_sdlc/core/: __init__.py  alembic_config.py  config_loader.py  content.py  database.py  db_import.py  db_merge.py  engine.py  git_config.py  init_files.py  models.py  project_marker.py  quality_config.py  review_config.py  session_database.py  storage_config.py
src/a_sdlc/hook_files/: __init__.py  block-source-edits.sh
src/a_sdlc/migrations/: __init__.py  env.py  script.py.mako
src/a_sdlc/migrations/versions/: 0001_baseline_v15.py  0002_projects_path_nullable.py  0003_drop_projects_path.py
src/a_sdlc/monitoring_files/: __init__.py  langfuse-compose.yaml  langfuse-hook.py
src/a_sdlc/personas/: sdlc-architect.md  sdlc-backend-engineer.md  sdlc-devops-engineer.md  sdlc-frontend-engineer.md  sdlc-product-manager.md  sdlc-qa-engineer.md  sdlc-security-engineer.md
src/a_sdlc/plugins/: __init__.py  base.py  jira.py  linear.py  local.py
src/a_sdlc/plugins/atlassian/: __init__.py  auth.py  client.py
src/a_sdlc/server/: __init__.py  agent_tools.py  challenge.py  challenge_tools.py  data_access.py  database.py  design_tools.py  execution_tools.py  github.py  github_tools.py  governance_helpers.py  health.py  prd_tools.py  project_tools.py  quality_helpers.py  quality_tools.py  review_tools.py  session_context.py  sprint_tools.py  sync.py  sync_tools.py  task_tools.py  worktree_tools.py
src/a_sdlc/storage/: __init__.py
src/a_sdlc/templates/: _round-table-blocks.md  ask.md  help.md  ideate.md  init.md  investigate.md  pr-feedback.md  prd-architect.md  prd-delete.md  prd-generate.md  prd-import.md  prd-investigate.md  prd-list.md  prd-split.md  prd-update.md  prd.md  publish.md  retrospective.md  scan.md  sonar-scan.md  sprint-complete.md  sprint-create.md  sprint-delete.md  sprint-import.md  sprint-link.md  sprint-list.md  sprint-mappings.md  sprint-run.md  sprint-show.md  sprint-start.md  sprint-sync-from.md  sprint-sync-to.md  sprint-sync.md  sprint-unlink.md  sprint.md  status.md  task-complete.md  task-create.md  task-delete.md  task-link.md  (+7 more)
src/a_sdlc/ui/: __init__.py
src/a_sdlc/ui/templates/: analytics.html  base.html  dashboard.html  health.html  home.html  no_project.html  onboarding.html  pipeline_runs.html  prd_detail.html  prds.html  run_detail.html  settings.html  sprint_detail.html  sprints.html  task_detail.html  tasks.html  work_item_card.html
src/a_sdlc/ui/templates/partials/: integration_card.html  integration_form.html  thread_viewer.html
tests/: __init__.py  conftest.py  test_adapters.py  test_agent_governance.py  test_agent_org.py  test_agent_tools.py  test_alembic_migrations.py  test_artifact_fixtures.py  test_artifact_integration.py  test_artifact_overhead.py  test_artifact_security.py  test_artifact_validator.py  test_backend_integration.py  test_challenge.py  test_cli.py  test_cli_db_commands.py  test_cli_pipeline.py  test_cli_targets.py  test_content_backends.py  test_content_objective.py  test_daemon.py  test_data_access.py  test_database_v14.py  test_db_import.py  test_db_merge.py  test_design.py  test_enhanced_run_status.py  test_example_artifacts.py  test_executor.py  test_executor_objective.py  test_external_sync.py  test_file_storage.py  test_gemini_extension.py  test_git_config.py  test_governance_enforcement.py  test_health.py  test_health_ui.py  test_http_session_isolation.py  test_http_transport.py  test_init_files.py  (+42 more)
tests/fixtures/escaping/: architecture.html  bare_amp_in_code.html  bare_lt_in_code.html  base_element.html  data_uri.html  external_href.html  form_element.html  iframe_element.html  img_element.html  import_in_style.html  javascript_uri.html  link_element.html  meta_http_equiv.html  onclick_attribute.html  raw_script_in_text.html  style_attribute.html  svg_element.html  url_in_style.html
tests/fixtures/pre_migration/: baseline_sizes.json  codebase-summary.md  data-model.md  directory-structure.md
