[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a-sdlc"
version = "0.4.0"
description = "SDLC Automation System for Claude Code - PRD, task, sprint, and sync management via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "a-sdlc contributors" }
]
keywords = [
    "sdlc",
    "claude-code",
    "documentation",
    "automation",
    "prd",
    "requirements",
    "tasks"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    # UI dependencies (for web dashboard)
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
linear = [
    "httpx>=0.25.0",
]
atlassian = [
    "httpx>=0.25.0",
]
sonarqube = [
    "pysonar",
]
all = [
    "a-sdlc[dev,linear,atlassian,sonarqube]",
]

[project.scripts]
a-sdlc = "a_sdlc.cli:main"

[project.entry-points."a_sdlc.plugins"]
local = "a_sdlc.plugins.local:LocalPlugin"
linear = "a_sdlc.plugins.linear:LinearPlugin"
jira = "a_sdlc.plugins.jira:JiraPlugin"

[project.entry-points."a_sdlc.artifacts"]
local = "a_sdlc.artifacts.local:LocalArtifactPlugin"
confluence = "a_sdlc.artifacts.confluence:ConfluencePlugin"

[project.urls]
Homepage = "https://github.com/a-sdlc/a-sdlc"
Documentation = "https://github.com/a-sdlc/a-sdlc#readme"
Repository = "https://github.com/a-sdlc/a-sdlc"
Issues = "https://github.com/a-sdlc/a-sdlc/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/a_sdlc"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Filename contains a hyphen (required by external hook config); cannot be renamed.
"src/a_sdlc/monitoring_files/langfuse-hook.py" = ["N999"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
