[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a-sdlc"
version = "0.9.0"
description = "SDLC Automation System for Claude Code - PRD, task, sprint, and sync management via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "a-sdlc contributors" }
]
keywords = [
    "sdlc",
    "claude-code",
    "documentation",
    "automation",
    "prd",
    "requirements",
    "tasks"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "pydantic>=2.12.6",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "mcp>=1.27.0",
    # UI dependencies (for web dashboard)
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "jinja2>=3.1.6",
    # Security floor pins — transitive deps with known CVEs
    "cryptography>=46.0.7",      # CVE-2026-39892 buffer overflow, CVE-2026-34073 DNS bypass
    "sqlalchemy>=2.0.50",        # CVE-2026-31453 SQL injection in HasCTE
    "starlette>=0.52.0",         # CVE-2026-43114 path traversal, PYSEC-2026-88 host injection
    "urllib3>=2.7.0",            # CVE-2026-44432 decompression bomb, CVE-2026-44431 header leak
    "idna>=3.15",                # CVE-2026-45409
    "pygments>=2.20.0",          # CVE-2026-4539
    "pyjwt>=2.13.0",             # PYSEC-2026-120, PYSEC-2026-175..179 multiple JWT vulns
    "python-dotenv>=1.2.2",      # CVE-2026-28684
    "python-multipart>=0.0.27",  # CVE-2026-40347, CVE-2026-42561
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",              # CVE-2025-71176
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0",
    "moto[s3]>=5.0.0",
    "requests>=2.32.6",       # CVE-2025-47516 header leakage on redirects
]
linear = [
    "httpx>=0.25.0",
]
atlassian = [
    "httpx>=0.25.0",
]
postgresql = [
    "psycopg2-binary>=2.9.0",
]
s3 = [
    "boto3>=1.34.0",
]
sonarqube = [
    "pysonar",
]
all = [
    "a-sdlc[dev,linear,atlassian,postgresql,s3,sonarqube]",
]

[project.scripts]
a-sdlc = "a_sdlc.cli:main"

[project.entry-points."a_sdlc.plugins"]
linear = "a_sdlc.plugins.linear:LinearPlugin"
jira = "a_sdlc.plugins.jira:JiraPlugin"

[project.entry-points."a_sdlc.artifacts"]
local = "a_sdlc.artifacts.local:LocalArtifactPlugin"
confluence = "a_sdlc.artifacts.confluence:ConfluencePlugin"

[project.urls]
Homepage = "https://github.com/a-sdlc/a-sdlc"
Documentation = "https://github.com/a-sdlc/a-sdlc#readme"
Repository = "https://github.com/a-sdlc/a-sdlc"
Issues = "https://github.com/a-sdlc/a-sdlc/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/a_sdlc"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Filename contains a hyphen (required by external hook config); cannot be renamed.
"src/a_sdlc/monitoring_files/langfuse-hook.py" = ["N999"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Alembic migration scripts are generated op-DSL; their correctness is verified
# by running them (tests/test_alembic_migrations.py), not by static typing.
exclude = ['(^|/)migrations/versions/']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: comprehensive backend integration tests",
]
